Minor non-functional changes: code cleaning.
	modified:   idas.chox.core/src/main/java/idas/chox/core/hpi/Hpi.java
	modified:   idas.chox.core/src/main/java/idas/chox/core/workflow/exceptions/InvalidClaimStatusException.java
	modified:   idas.chox.data/src/main/java/idas/chox/data/ExcelTask.java
	modified:   idas.chox.data/src/main/java/idas/chox/data/notifications/EcdAnomalousNotificationChecker.java
	modified:   idas.chox.data/src/main/java/idas/chox/data/notifications/NotificationType.java
	modified:   idas.chox.data/src/main/java/idas/chox/data/services/AccessibilityServiceImpl.java
	modified:   idas.chox.data/src/main/java/idas/chox/data/services/AuditTrailServiceImpl.java
	modified:   idas.chox.data/src/main/java/idas/chox/data/services/BordereauServiceImpl.java
	modified:   idas.chox.data/src/main/java/idas/chox/data/services/BreBandOrganisationServiceImpl.java
	modified:   idas.chox.data/src/main/java/idas/chox/data/services/HireMonitoringEcdServiceImpl.java
	modified:   idas.chox.data/src/main/java/idas/chox/data/services/InsurerChorganisationServiceImpl.java
	modified:   idas.chox.data/src/main/java/idas/chox/data/services/LookupServiceImpl.java
	modified:   idas.chox.service/src/main/java/idas/chox/service/bre/rules/HasCalculatedCorrectDailyRate.java
	modified:   idas.chox.service/src/main/java/idas/chox/service/bre/rules/HireGrossSumCheck.java
	modified:   idas.chox.service/src/main/java/idas/chox/service/bre/rules/RepairGrossSumCheck.java
	modified:   idas.chox.service/src/main/java/idas/chox/service/bre/rules/TotalLossFeeGrossSumCheck.java
	modified:   idas.chox.service/src/main/java/idas/chox/service/reports/AdminWeeklyOverviewReport.java
	modified:   idas.chox.service/src/main/java/idas/chox/service/reports/AverageSettlementAmountReport.java
	modified:   idas.chox.service/src/main/java/idas/chox/service/reports/BillingChoReport.java
	modified:   idas.chox.service/src/main/java/idas/chox/service/reports/BillingInsurerReport.java
	modified:   idas.chox